--- a/Solution/ContosoProject/Data/Data.csproj
+++ b/Solution/ContosoProject/Data/Data.csproj
@@ -50,8 +50,12 @@
   <ItemGroup>
     <Compile Include="DumbData\BaseDao.cs" />
     <Compile Include="DumbData\ContactInfoStor.cs" />
+    <Compile Include="DumbData\ContactsInfoDao.cs" />
+    <Compile Include="DumbData\CustomerDao.cs" />
     <Compile Include="DumbData\CustomerStor.cs" />
+    <Compile Include="DumbData\PersonalInfoDao.cs" />
     <Compile Include="DumbData\PersonalInfoStor.cs" />
+    <Compile Include="DumbData\ProductCategoryStor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
