--- a/Solution/ContosoProject/Domain/Domain.csproj
+++ b/Solution/ContosoProject/Domain/Domain.csproj
@@ -43,9 +43,12 @@
     <Compile Include="DAO\ICustomerRepository.cs" />
     <Compile Include="DAO\IGoodsRepository.cs" />
     <Compile Include="DAO\IGoodsRowRepository.cs" />
+    <Compile Include="DAO\IOrderRepository.cs" />
     <Compile Include="DAO\IPersonalInfoRepository.cs" />
     <Compile Include="DAO\IProductCategoryRepository.cs" />
     <Compile Include="DAO\IRepository.cs" />
+    <Compile Include="DAO\IRoleRepository.cs" />
+    <Compile Include="DAO\IUserRepository.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\Comment.cs" />
     <Compile Include="Entities\ContactInfo.cs" />
