--- a/Solution/ContosoProject/Data/Data.csproj
+++ b/Solution/ContosoProject/Data/Data.csproj
@@ -48,12 +48,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DumbData\GoodsDao.cs" />
     <Compile Include="DumbData\GoodsRowStorage.cs" />
     <Compile Include="DumbData\GoodsStorage.cs" />
     <Compile Include="DumbData\IOrderRepository.cs" />
     <Compile Include="DumbData\IRoleRepository.cs" />
     <Compile Include="DumbData\IUserRepository.cs" />
     <Compile Include="DumbData\OrderDao.cs" />
+    <Compile Include="DumbData\PermissionDao.cs" />
     <Compile Include="DumbData\ProductCategoryDao.cs" />
     <Compile Include="DumbData\RoleDao.cs" />
     <Compile Include="DumbData\RolerStorage.cs" />
