fix of a lot of compiling bugs

--- a/Solution/ContosoProject/Data/Data.csproj
+++ b/Solution/ContosoProject/Data/Data.csproj
@@ -49,17 +49,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DumbData\Storage\GoodsRowStorage.cs" />
-    <Compile Include="DumbData\GoodsDao.cs" />
+    <Compile Include="DumbData\Storage\CommentStorage.cs" />
+    <Compile Include="DumbData\Storage\OrderStatusStorage.cs" />
+    <Compile Include="DumbData\tempDAO\CommentRepository.cs" />
+    <Compile Include="DumbData\tempDAO\GoodsDao.cs" />
     <Compile Include="DumbData\Storage\GoodsStorage.cs" />
     <Compile Include="DumbData\tempDAO\OrderDao.cs" />
+    <Compile Include="DumbData\tempDAO\OrderStatusDao.cs" />
     <Compile Include="DumbData\tempDAO\RoleDao.cs" />
-    <Compile Include="DumbData\Storage\RolerStorage.cs" />
+    <Compile Include="DumbData\Storage\RoleStorage.cs" />
     <Compile Include="DumbData\tempDAO\BaseDao.cs" />
     <Compile Include="DumbData\Storage\ContactInfoStor.cs" />
     <Compile Include="DumbData\tempDAO\ContactsInfoDao.cs" />
     <Compile Include="DumbData\tempDAO\CustomerDao.cs" />
-    <Compile Include="DumbData\PermissionDao.cs" />
-    <Compile Include="DumbData\ProductCategoryDao.cs" />
+    <Compile Include="DumbData\tempDAO\PermissionDao.cs" />
+    <Compile Include="DumbData\tempDAO\ProductCategoryDao.cs" />
     <Compile Include="DumbData\Storage\CustomerStor.cs" />
     <Compile Include="DumbData\tempDAO\PersonalInfoDao.cs" />
     <Compile Include="DumbData\Storage\PersonalInfoStor.cs" />
