--- a/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
+++ b/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
@@ -44,11 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Customers\Add\CustomerDetailsViev.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Customers\Add\CustomerDetailsViev.Designer.cs">
+      <DependentUpon>CustomerDetailsViev.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Customers\Report\CustomerReportView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Customers\Report\CustomerReportView.Designer.cs">
+      <DependentUpon>CustomerReportView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Customers\Search\CustomersListViev.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Customers\Search\CustomersListViev.Designer.cs">
+      <DependentUpon>CustomersListViev.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -58,12 +70,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TestForm.Designer.cs">
-      <DependentUpon>TestForm.cs</DependentUpon>
-    </Compile>
+    <EmbeddedResource Include="Customers\Add\CustomerDetailsViev.resx">
+      <DependentUpon>CustomerDetailsViev.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Customers\Report\CustomerReportView.resx">
+      <DependentUpon>CustomerReportView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Customers\Search\CustomersListViev.resx">
+      <DependentUpon>CustomersListViev.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -99,6 +114,7 @@
       <Name>Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
