--- a/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
+++ b/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
@@ -44,11 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AuthenticationForm\AuthenticationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AuthenticationForm\AuthenticationForm.Designer.cs">
+      <DependentUpon>AuthenticationForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditUserForm\EditUserForm .cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditUserForm\EditUserForm .Designer.cs">
+      <DependentUpon>EditUserForm .cs</DependentUpon>
+    </Compile>
+    <Compile Include="GoodsStoreReportForm\GoodsStoreReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GoodsStoreReportForm\GoodsStoreReportForm.Designer.cs">
+      <DependentUpon>GoodsStoreReportForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -58,12 +70,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TestForm.Designer.cs">
-      <DependentUpon>TestForm.cs</DependentUpon>
-    </Compile>
+    <EmbeddedResource Include="AuthenticationForm\AuthenticationForm.resx">
+      <DependentUpon>AuthenticationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditUserForm\EditUserForm .resx">
+      <DependentUpon>EditUserForm .cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GoodsStoreReportForm\GoodsStoreReportForm.resx">
+      <DependentUpon>GoodsStoreReportForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
