--- a/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
+++ b/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
@@ -45,10 +45,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuthenticationForm\AuthenticationForm.cs">
-	      <SubType>Form</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="AuthenticationForm\AuthenticationForm.Designer.cs">
       <DependentUpon>AuthenticationForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Customers\Add\CustomerDetailsViev.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Customers\Add\CustomerDetailsViev.Designer.cs">
+      <DependentUpon>CustomerDetailsViev.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Customers\Report\CustomerReportView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Customers\Report\CustomerReportView.Designer.cs">
+      <DependentUpon>CustomerReportView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Customers\Search\CustomersListViev.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Customers\Search\CustomersListViev.Designer.cs">
+      <DependentUpon>CustomersListViev.cs</DependentUpon>
     </Compile>
     <Compile Include="EditUserForm\EditUserForm .cs">
       <SubType>Form</SubType>
@@ -61,7 +79,7 @@
     </Compile>
     <Compile Include="GoodsStoreReportForm\GoodsStoreReportForm.Designer.cs">
       <DependentUpon>GoodsStoreReportForm.cs</DependentUpon>
-	  </Compile>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,17 +87,26 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Order\Edit\EditOrderForm.cs">
-	<SubType>Form</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <EmbeddedResource Include="AuthenticationForm\AuthenticationForm.resx">
       <DependentUpon>AuthenticationForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Customers\Add\CustomerDetailsViev.resx">
+      <DependentUpon>CustomerDetailsViev.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Customers\Report\CustomerReportView.resx">
+      <DependentUpon>CustomerReportView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Customers\Search\CustomersListViev.resx">
+      <DependentUpon>CustomersListViev.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditUserForm\EditUserForm .resx">
       <DependentUpon>EditUserForm .cs</DependentUpon>
-      </EmbeddedResource>
+    </EmbeddedResource>
     <Compile Include="Order\Edit\EditOrderForm.Designer.cs">
       <DependentUpon>EditOrderForm.cs</DependentUpon>
-	  </Compile>  
+    </Compile>
     <EmbeddedResource Include="GoodsStoreReportForm\GoodsStoreReportForm.resx">
       <DependentUpon>GoodsStoreReportForm.cs</DependentUpon>
     </EmbeddedResource>
