--- a/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
+++ b/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
@@ -138,8 +138,24 @@
     <Compile Include="MainView.Designer.cs">
       <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Order\Edit\EditOrderForm.cs">
+    <Compile Include="Order\AddEdit\AddOrderXtraForm.cs">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Order\AddEdit\AddOrderXtraForm.Designer.cs">
+      <DependentUpon>AddOrderXtraForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Order\AddEdit\Presenter.cs" />
+    <Compile Include="Order\Report\OrderReportFrom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Order\Report\OrderReportFrom.Designer.cs">
+      <DependentUpon>OrderReportFrom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Order\Report\SearchXtraForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Order\Report\SearchXtraForm.Designer.cs">
+      <DependentUpon>SearchXtraForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Test\CustomerListView.cs">
       <SubType>Form</SubType>
@@ -168,9 +184,6 @@
     <EmbeddedResource Include="EditUserForm\EditUserForm .resx">
       <DependentUpon>EditUserForm .cs</DependentUpon>
     </EmbeddedResource>
-    <Compile Include="Order\Edit\EditOrderForm.Designer.cs">
-      <DependentUpon>EditOrderForm.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="GoodsForm.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>GoodsForm.Designer.cs</LastGenOutput>
@@ -181,31 +194,19 @@
     <EmbeddedResource Include="GoodsStoreReportForm\GoodsStoreReportForm.resx">
       <DependentUpon>GoodsStoreReportForm.cs</DependentUpon>
     </EmbeddedResource>
-    <Compile Include="Order\Add\AddOrderForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Order\Add\AddOrderForm.Designer.cs">
-      <DependentUpon>AddOrderForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Order\Report\OrderReportFrom.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Order\Report\OrderReportFrom.Designer.cs">
-      <DependentUpon>OrderReportFrom.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainView.resx">
       <DependentUpon>MainView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Order\Edit\EditOrderForm.resx">
-      <DependentUpon>EditOrderForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Order\Add\AddOrderForm.resx">
-      <DependentUpon>AddOrderForm.cs</DependentUpon>
+    <EmbeddedResource Include="Order\AddEdit\AddOrderXtraForm.resx">
+      <DependentUpon>AddOrderXtraForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Order\Report\OrderReportFrom.resx">
       <DependentUpon>OrderReportFrom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Order\Report\SearchXtraForm.resx">
+      <DependentUpon>SearchXtraForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -248,6 +249,7 @@
       <Name>Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
