--- a/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
+++ b/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
@@ -146,11 +146,11 @@
     </Compile>
     <Compile Include="Order\AddEdit\Presenter.cs" />
     <Compile Include="Order\Search\SearchPresenter.cs" />
-    <Compile Include="Order\Search\SearchXtraView.cs">
+    <Compile Include="Order\Search\SearchView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Order\Search\SearchXtraView.Designer.cs">
-      <DependentUpon>SearchXtraView.cs</DependentUpon>
+    <Compile Include="Order\Search\SearchView.Designer.cs">
+      <DependentUpon>SearchView.cs</DependentUpon>
     </Compile>
     <Compile Include="Test\CustomerListView.cs">
       <SubType>Form</SubType>
@@ -197,8 +197,8 @@
     <EmbeddedResource Include="Order\AddEdit\AddOrderXtraForm.resx">
       <DependentUpon>AddOrderXtraForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Order\Search\SearchXtraView.resx">
-      <DependentUpon>SearchXtraView.cs</DependentUpon>
+    <EmbeddedResource Include="Order\Search\SearchView.resx">
+      <DependentUpon>SearchView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -210,6 +210,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\ContosoUI.Order.Search.SearchViewModel.datasource" />
     <None Include="Properties\DataSources\Domain.Entities.Customer.datasource" />
     <None Include="Properties\DataSources\Domain.Entities.Order.datasource" />
     <EmbeddedResource Include="Test\CustomerListView.resx">
