--- a/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
+++ b/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
@@ -91,13 +91,6 @@
     <Compile Include="Customers\Add\CustomerDetailsViev.Designer.cs">
       <DependentUpon>CustomerDetailsViev.cs</DependentUpon>
     </Compile>
-    <Compile Include="Customers\Report\CustomerReportPresenter.cs" />
-    <Compile Include="Customers\Report\CustomerReportView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Customers\Report\CustomerReportView.Designer.cs">
-      <DependentUpon>CustomerReportView.cs</DependentUpon>
-    </Compile>
     <Compile Include="Customers\Search\CustomersListPresenter.cs" />
     <Compile Include="Customers\Search\CustomersListViev.cs">
       <SubType>Form</SubType>
@@ -105,6 +98,7 @@
     <Compile Include="Customers\Search\CustomersListViev.Designer.cs">
       <DependentUpon>CustomersListViev.cs</DependentUpon>
     </Compile>
+    <Compile Include="Customers\Search\CustomersListViewModel.cs" />
     <Compile Include="EditUserForm\EditUserForm .cs">
       <SubType>Form</SubType>
     </Compile>
@@ -158,9 +152,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Customers\Add\CustomerDetailsViev.resx">
       <DependentUpon>CustomerDetailsViev.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Customers\Report\CustomerReportView.resx">
-      <DependentUpon>CustomerReportView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Customers\Search\CustomersListViev.resx">
       <DependentUpon>CustomersListViev.cs</DependentUpon>
@@ -217,6 +208,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\ContosoUI.Customers.Search.CustomersListViewModel.datasource" />
     <None Include="Properties\DataSources\Domain.Entities.Customer.datasource" />
     <None Include="Properties\DataSources\Domain.Entities.Order.datasource" />
     <EmbeddedResource Include="Test\CustomerListView.resx">
