--- a/Solution/ContosoProject/Data/Data.csproj
+++ b/Solution/ContosoProject/Data/Data.csproj
@@ -61,6 +61,17 @@
     <Compile Include="DumbData\tempDAO\ProductCategoryDao.cs" />
     <Compile Include="DumbData\tempDAO\PersonalInfoDao.cs" />
     <Compile Include="DumbData\tempDAO\UserDao.cs" />
+    <Compile Include="EFData\EfBaseDao.cs" />
+    <Compile Include="EFData\ProjectContext.cs" />
+    <Compile Include="Migrations\201510201359549_Init.cs" />
+    <Compile Include="Migrations\201510201359549_Init.Designer.cs">
+      <DependentUpon>201510201359549_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201510201406578_Init1.cs" />
+    <Compile Include="Migrations\201510201406578_Init1.Designer.cs">
+      <DependentUpon>201510201406578_Init1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,7 +79,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="EFData\" />
+    <EmbeddedResource Include="Migrations\201510201359549_Init.resx">
+      <DependentUpon>201510201359549_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510201406578_Init1.resx">
+      <DependentUpon>201510201406578_Init1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj">
