* modify initial Data
* remove unused DAO

--- a/Solution/ContosoProject/Domain/Domain.csproj
+++ b/Solution/ContosoProject/Domain/Domain.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Entities\ProductCategory.cs" />
     <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="PermissionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
