--- a/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
+++ b/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
@@ -127,6 +127,13 @@
     <Compile Include="Order\Search\SearchView.Designer.cs">
       <DependentUpon>SearchView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Roles\RolesPresenter.cs" />
+    <Compile Include="Roles\RolesView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Roles\RolesView.Designer.cs">
+      <DependentUpon>RolesView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Users\ReportForm\UserReportForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -173,6 +180,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Order\Search\SearchView.resx">
       <DependentUpon>SearchView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Roles\RolesView.resx">
+      <DependentUpon>RolesView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Users\ReportForm\UserReportForm.resx">
       <DependentUpon>UserReportForm.cs</DependentUpon>
