--- a/Solution/ContosoProject/Data/Data.csproj
+++ b/Solution/ContosoProject/Data/Data.csproj
@@ -64,6 +64,7 @@
     <Compile Include="EFData\EfBaseDao.cs" />
     <Compile Include="EFData\EFContactInfoDao.cs" />
     <Compile Include="EFData\EFCustomerDao.cs" />
+    <Compile Include="EFData\EFGoodsDao.cs" />
     <Compile Include="EFData\EFProductCategoryDao.cs" />
     <Compile Include="EFData\ProjectContext.cs" />
     <Compile Include="Migrations\201510221021052_Init.cs" />
