--- a/Solution/ContosoProject/Data/Data.csproj
+++ b/Solution/ContosoProject/Data/Data.csproj
@@ -66,6 +66,7 @@
     <Compile Include="EFData\EFCustomerDao.cs" />
     <Compile Include="EFData\EFProductCategoryDao.cs" />
     <Compile Include="EFData\ProjectContext.cs" />
+    <Compile Include="EFData\UserDao.cs" />
     <Compile Include="Migrations\201510221021052_Init.cs" />
     <Compile Include="Migrations\201510221021052_Init.Designer.cs">
       <DependentUpon>201510221021052_Init.cs</DependentUpon>
