--- a/Solution/ContosoProject/Data/Data.csproj
+++ b/Solution/ContosoProject/Data/Data.csproj
@@ -65,10 +65,16 @@
     <Compile Include="EFData\ContactsInfoDao.cs" />
     <Compile Include="EFData\CustomerDao.cs" />
     <Compile Include="EFData\EFProductCategoryDao.cs" />
+    <Compile Include="EFData\PermissionDao.cs" />
     <Compile Include="EFData\ProjectContext.cs" />
+    <Compile Include="EFData\RoleDao.cs" />
     <Compile Include="Migrations\201510221021052_Init.cs" />
     <Compile Include="Migrations\201510221021052_Init.Designer.cs">
       <DependentUpon>201510221021052_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201510271339203_RolePerson.cs" />
+    <Compile Include="Migrations\201510271339203_RolePerson.Designer.cs">
+      <DependentUpon>201510271339203_RolePerson.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -86,6 +92,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201510221021052_Init.resx">
       <DependentUpon>201510221021052_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510271339203_RolePerson.resx">
+      <DependentUpon>201510271339203_RolePerson.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
